--- a/CSS-Selectors/element_selectors.html
+++ b/CSS-Selectors/element_selectors.html
@@ -15,3 +15,9 @@
         <p>And me!</p>
     </body>
 </html>
+
+git config --global user.email "anirudhagajbhiye2@gmail.com"
+git config --global user.name "anirudhagajbhiye"
+
+
+
