--- a/CSS-Assignment/CSS-float_task/default.html
+++ b/CSS-Assignment/CSS-float_task/default.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        div {
-            background-color:lightblue;
-            padding: 4px;
-        }
-        div container {
-            background-color: lightgray;
-            padding: 4px;
-        }
-    
-        
-    </style>
+<style>
+    #header {
+        background-color: skyblue;
+        padding: 4px;
+        float: none;
+    }
+
+    #container {
+        background-color: lightgray;
+        padding: 4px;
+    }
+
+    #div-1 {
+        background-color: lightsalmon;
+        position: relative;
+    }
+
+    #div-2 {
+        background-color: lightgreen;
+    }
+
+    #div-3 {
+        background-color: palevioletred;
+    }
+
+    #div-4 {
+        background-color: white;
+    }
+
+    #footer {
+        background-color: skyblue;
+        padding: 10px;
+    }
+</style>
 </html>
-<body>
     <div id="header">
         <p>id="header"</p>
     </div>
     <div id="container">
         <p>id="container"</p>
         <div id="div-1">
-            <p>id="div-1</p>
-            <p>This is a paragraph</p>
+            <p>id="div-1"</p>
+            <p>This is a sample paragraph.</p>
+        </div>
+        <div id="div-2">
+            <p>id="div-2"</p>
+            <p>This is a sample paragraph.</p>
+        </div>
+        <div id="div-3">
+            <p>id="div-3"</p>
+            <p>This is a sample paragraph.</p>
+        </div>
+        <div id="div-4">
+            <p>id="div-4"</p>
+            <p>This is a sample paragraph.</p>
         </div>
     </div>
-</body>
+<div id="footer">
+    <p>id="footer"</p>
+</div>
