--- a/Proinsure/header.html
+++ b/Proinsure/header.html
@@ -6,6 +6,12 @@
             justify-content: space-between;
             align-items: center;
         }
+        .header {
+            padding: 18px 0;
+            background-color: white;
+            position: fixed;
+            width: 100%;
+        }
         .flex-container a {
             font-size: 40px;
             font-family: 'Times New Roman', Times, serif;
@@ -17,9 +23,10 @@
         .flex-container .nav a {
             display: inline;
             text-decoration: none;
+            justify-content: space-between;
+            margin-right: 32px;
             font-family: sans-serif;
             font-size: 18px;
-            padding-right: 32px;
             color: rgb(62, 55, 55);
             text-transform: uppercase;
             font-weight: 600;
