--- a/Proinsure/header.html
+++ b/Proinsure/header.html
@@ -1,56 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .flex-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .header {
-            padding: 18px 0;
-            background-color: white;
-            position: fixed;
-            width: 100%;
-        }
-        .flex-container a {
-            font-size: 40px;
-            font-family: 'Times New Roman', Times, serif;
-            text-decoration: none;
-            padding-left: 32px;
-            color: rgb(24, 3, 24);
-            font-weight: 500;
-        }
-        .flex-container .nav a {
-            display: inline;
-            text-decoration: none;
-            justify-content: space-between;
-            margin-right: 32px;
-            font-family: sans-serif;
-            font-size: 18px;
-            color: rgb(62, 55, 55);
-            text-transform: uppercase;
-            font-weight: 600;
-        }
-        .nav a:hover {
-            background-color: white;
-            color: rgb(129, 121, 121);
-        }
-        .btn {
-            padding: 10px 16px;
-            display: inline-block;
-            border: 1px solid black;
-            border-radius: 2px;
-        }
-        .nav.btn:hover {
-            background-color:rgb(24, 3, 24);
-            color:#ffffff
-        }
-
-    </style>
-    <body>
-        <header class="header">
-            <div class="flex-container">
-                <a class="title" href="#">Proinsure</a>
+    <link rel="stylesheet" href="style.css">
+<body>
+    <header class="header">
+        <div class="flex-container">
+            <a class="title" href="#">Proinsure</a>
                 <nav class="nav">
                     <a href="Home">Home</a>
                     <a href="About">About</a>
