--- a/class_task.html
+++ b/class_task.html
@@ -1,98 +1,67 @@
 <!DOCTYPE html>
 <html>
-<style>
-    body {
-        background-color: orange;
-    }
-
-    .flex-container {
-        display: flex;
-        justify-content: center;
-    }
-    p {
-        font-size: 14;
-        font-weight: 300;
-    }
-
-    .card-1 {
-        text-align: center;
-        background-color: white;
-        padding: 32px;
-        margin: 14px;
-        margin-top: 32px;
-        border: 32px;
-        border-radius: 24px;
-        height: 500px;
-        width: 200px;
-    }
-    .card-1 header {
-        font-family: sans-serif;
-        font-size: 32px;
-        font-weight: 600;
-    }
-   
-    .card-2 {
-        text-align: center;
-        border: 32px;
-        border-radius: 24px;
-        padding: 32px;
-        margin: 14px;
-        margin-top: 32px;
-        background-color: white;
-        height: 500px;
-        width: 200px;
-    }
-    .card-2 header {
-        font-family: sans-serif;
-        font-size: 32px;
-        font-weight: 600;
-    }
-
-    .card-3 {
-        text-align: center;
-        border: 32px;
-        border-radius: 24px;
-        padding: 32px;
-        margin: 14px;
-        margin-top: 32px;
-        background-color: white;
-        height: 500px;
-        width: 200px;
-    }
-    .card-3 header {
-        font-family: sans-serif;
-        font-size: 32px;
-        font-weight: 600;
-    }
-</style>
+<link rel="stylesheet" href="stylesheet.css">
 <body>
     <div class="flex-container">
         <div class="card-1">
             <header>Pastries</header>
-            <p><i>Life is short, eat dessert first!</i></p><hr width="150%" color="orange">
+            <p><i>Life is short, eat dessert first!</i></p>
+            <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="bread.png">
-            <p>Bread</p>
+            <p class="p-1">Bread</p>
             <ul>
                 BAGGUATE 120.00
                 BAGEL 120.00
                 ENGLISH MUFFIN 110.00
             </ul>
-            <p>Pie</p>
+            <p class="p-1">Pie</p>
             <ul>
                 PUMPKIN PIE 350.00
                 BLUEBERRY PIE 405.00
                 RASPBERRY PIE 360.00
             </ul>
+            <hr width="150%" color="orange">
+            <a href="Order Now!">Order Now!</a>
         </div>
         <div class="card-2">
             <header>Drinks</header>
-            <p><i>Drinks from heaven!</i></p><hr width="150%" color="orange">
+            <p><i>Drinks from heaven!</i></p>
+            <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="coffee-cup.png">
+            <p class="p-2">Hot</p>
+            <ul>
+                BARAKO 100.00
+                ESPRESSO 100.00
+                WHITE MOCHA 110.00
+            </ul>
+            <p class="p-2">Cold</p>
+            <ul>
+                FRAPPUCINO 100.00
+                MATCHA 105.00
+                ICED AMERICANO 100.00
+            </ul>
+            <hr width="150%" color="orange">
+            <a href="Order Now!">Order Now!</a>
         </div>
         <div class="card-3">
             <header>Snacks</header>
-            <p><i>Snacks and bites for Delight!</i></p><hr width="150%" color="orange">
+            <p><i>Snacks and bites for Delight!</i></p>
+            <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="snack.png">
+            <p class="p-3">FILIPINO</p>
+            <ul>
+                LUMPIANG SHANGHAI 200.00
+                MANI 80.00
+                TURON 110.00
+            </ul>
+            <p class="p-3">MEXICAN</p>
+            <ul>
+                NACHOS 100.00
+                BURRITO 200.00
+                TAMALES 95.00
+            </ul>
+            <hr width="150%" color="orange">
+            <a href="Order Now!">Order Now!</a>
         </div>
     </div>
 </body>
