menu card alignment complete

--- a/class_task.html
+++ b/class_task.html
@@ -9,18 +9,36 @@
             <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="bread.png">
             <p class="p-1">Bread</p>
-            <ul>
-                BAGGUATE 120.00
-                BAGEL 120.00
-                ENGLISH MUFFIN 110.00
-            </ul>
+            <table>
+                <tr>
+                    <td class="list">BAGUETTE</td>
+                    <td class="price">120.00</td>
+                </tr>
+                <tr>
+                    <td class="list">BAGEL</td>
+                    <td class="price">120.00</td>
+                </tr>
+                <tr>
+                    <td class="list">ENGLISH MUFFIN</td>
+                    <td class="price">110.00</td>
+                </tr>
+            </table>
             <p class="p-1">Pie</p>
-            <ul>
-                PUMPKIN PIE 350.00
-                BLUEBERRY PIE 405.00
-                RASPBERRY PIE 360.00
-            </ul>
-            <hr width="150%" color="orange">
+            <table>
+                <tr>
+                    <td class="list">PUMPKIN PIE</td>
+                    <td class="price">350.00</td>
+                </tr>
+                <tr>
+                    <td class="list">BLUE BERRY PIE</td>
+                    <td class="price">405.00</td>
+                </tr>
+                <tr>
+                    <td class="list">RASPBERRY PIE</td>
+                    <td class="price">360.00</td>
+                </tr>
+            </table>
+            <hr>
             <a href="Order Now!">Order Now!</a>
         </div>
         <div class="card-2">
@@ -29,18 +47,36 @@
             <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="coffee-cup.png">
             <p class="p-2">Hot</p>
-            <ul>
-                BARAKO 100.00
-                ESPRESSO 100.00
-                WHITE MOCHA 110.00
-            </ul>
+            <table>
+                <tr>
+                    <td class="list">BARAKO</td>
+                    <td class="price">100.00</td>
+                </tr>
+                <tr>
+                    <td class="list">ESPRESSO</td>
+                    <td class="price">100.00</td>
+                </tr>
+                <tr>
+                    <td class="list">WHITE MOCHA</td>
+                    <td class="price">110.00</td>
+                </tr>
+            </table> 
             <p class="p-2">Cold</p>
-            <ul>
-                FRAPPUCINO 100.00
-                MATCHA 105.00
-                ICED AMERICANO 100.00
-            </ul>
-            <hr width="150%" color="orange">
+            <table>
+                <tr>
+                    <td class="list">FRAPPUCINO</td>
+                    <td class="price">100.00</td>
+                </tr>
+                <tr>
+                    <td class="list">MATCHA</td>
+                    <td class="price">105.00</td>
+                </tr>
+                <tr>
+                    <td class="list">ICED AMERICANO</td>
+                    <td class="price">100.00</td>
+                </tr>
+            </table>
+            <hr>
             <a href="Order Now!">Order Now!</a>
         </div>
         <div class="card-3">
@@ -49,18 +85,37 @@
             <hr width="150%" color="orange">
             <img style="height: 42px; width: 42px;" src="snack.png">
             <p class="p-3">FILIPINO</p>
-            <ul>
-                LUMPIANG SHANGHAI 200.00
-                MANI 80.00
-                TURON 110.00
+            <table>
+                <tr>
+                    <td class="list">LUMPIANG SHANGHAI</td>
+                    <td class="price">200.00</td>
+                </tr>
+                <tr>
+                    <td class="list">MANI</td>
+                    <td class="price">80.00</td>
+                </tr>
+                <tr>
+                    <td class="list">TURON</td>
+                    <td class="price">110.00</td>
+                </tr>
+            </table>
             </ul>
             <p class="p-3">MEXICAN</p>
-            <ul>
-                NACHOS 100.00
-                BURRITO 200.00
-                TAMALES 95.00
-            </ul>
-            <hr width="150%" color="orange">
+            <table>
+                <tr>
+                    <td class="list">NACHOS</td>
+                    <td class="price">100.00</td>
+                </tr>
+                <tr>
+                    <td class="list">BURRITO</td>
+                    <td class="price">200.00</td>
+                </tr>
+                <tr>
+                    <td class="list">TAMALES</td>
+                    <td class="price">95.00</td>
+                </tr>
+            </table>
+            <hr>
             <a href="Order Now!">Order Now!</a>
         </div>
     </div>
