--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -6,15 +6,34 @@
     <!-- header section -->
     <header class="default-header">
         <div class="flex-container-1">
-                <a href="#"><img src="logo.png"></a>
-                <div class="main menu">
-                    <nav class="nav-bar">
-                        <a href="Home">Home</a>
-                        <a href="Facilites">Facilities</a>
-                        <a href="Services">Services</a>
-                        <a href="Book">Book</a>
-                    </nav>
-                </div>
+            <a href="#"><img src="logo.png"></a>
+            <div class="main menu">
+                <nav class="nav-bar">
+                    <a href="Home">Home</a>
+                    <a href="Facilites">Facilities</a>
+                    <a href="Services">Services</a>
+                    <a href="Book">Book</a>
+                </nav>
+            </div>
         </div>
     </header>
+    <!-- banner section -->
+    <section class="banner class">
+        <div class="flex-container-2">
+            <div class="overlay">
+                <img src="Bedroom-table-chair-bed-window-bright_1920x1200.jpg">
+                <h1>Enjoy Holidays<br>
+                    with affordable Hotels
+                </h1>
+            </div>
+            <div class="overlay">
+                <img src="Bedroom-table-chair-bed-window-bright_1920x1200.jpg">
+                <h1>Enjoy Holidays<br>
+                    with affordable Hotels
+                </h1>
+                <a class="btn-1" href="button">Start Searching</a>
+            </div>
+        </div>
+    </section>
 </body>
+</html>
