log in form customized

--- a/Practice-file/log_in_form.html
+++ b/Practice-file/log_in_form.html
@@ -8,6 +8,7 @@
         color: white;
         font-family: sans-serif;
     }
+
     body {
         margin: 0;
         padding: 0;
@@ -79,11 +80,15 @@
     }
 
     footer {
-        float: inline-end;
-        width: 500px;
-        margin-left: 50px;
+        bottom: 0px;
+        height: 35px;
+        margin: 190px 14px 0px 0px;
+        text-align: right;
+        padding: 10px 30px;
     }
-
+    footer a:hover {
+        color:rgb(74, 74, 232);
+    }
 </style>
 <body>
     <div class="flex-container">
@@ -105,9 +110,8 @@
         <a class="link" href="#">Forgot Password?</a>
     </div>
     <footer>
-        <a href="#">Privacy</a>
-        <span class="line"></span>
-        <a href="#">Terms</a>
+        <a href="#">Privacy</a> &nbsp;|
+            <a href="#">Terms</a>
     </footer>
 </body>
 </html>
