--- a/Practice-file/log_in_form.html
+++ b/Practice-file/log_in_form.html
@@ -36,8 +36,8 @@
 
     select {
         background-color: rgb(38, 38, 78);
-        text-align: center;
-        padding: 8px 24px;
+        text-align: left;
+        padding: 6px 4px;
         border-radius: 4px;
     }
 
@@ -51,20 +51,21 @@
         font-weight: 600;
     }
 
-    input {
+    input[type=text]{
         width: 400px;
         padding: 12px 28px;
+        border:2px solid black;
         margin: 8px 0;
-        display: inline-block;
-        border: none;
         background-color: white;
         color: black;
         border-radius: 4px;
+        outline: none;
         box-sizing: border-box;
     }
 
-    input:hover {
-        border-color: rgb(74, 74, 232);
+    input[type=text]:focus {
+        border-color: black;
+        border: 4px solid rgb(98, 98, 201);
     }
 
     .btn-1 {
@@ -77,6 +78,7 @@
 
     .link:hover {
         color: rgb(74, 74, 232);
+        text-decoration: underline;
     }
 
     footer {
@@ -86,8 +88,10 @@
         text-align: right;
         padding: 10px 30px;
     }
+
     footer a:hover {
-        color:rgb(74, 74, 232);
+        color: rgb(74, 74, 232);
+        text-decoration: underline;
     }
 </style>
 <body>
@@ -111,7 +115,7 @@
     </div>
     <footer>
         <a href="#">Privacy</a> &nbsp;|
-            <a href="#">Terms</a>
+        <a href="#">Terms</a>
     </footer>
 </body>
 </html>
