cards class task

--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -18,21 +18,16 @@
         </div>
     </header>
     <!-- banner section -->
-    <section class="banner class">
-        <div class="flex-container-2">
-            <div class="overlay">
+    <section class="banner-class">
+        <div class="overlay">
+            <div class="flex-container-2">
                 <img src="Bedroom-table-chair-bed-window-bright_1920x1200.jpg">
                 <h1>Enjoy Holidays<br>
                     with affordable Hotels
                 </h1>
             </div>
-            <div class="overlay">
-                <img src="Bedroom-table-chair-bed-window-bright_1920x1200.jpg">
-                <h1>Enjoy Holidays<br>
-                    with affordable Hotels
-                </h1>
-                <a class="btn-1" href="button">Start Searching</a>
-            </div>
+            <a class="btn-1" href="button">Start Searching</a>
+        </div>
         </div>
     </section>
 </body>
