class task cards CSS flexbox

--- a/Practice-file/class-task/cards.html
+++ b/Practice-file/class-task/cards.html
@@ -4,41 +4,53 @@
     <link rel="stylesheet" href="style.css">
     <div class="flex-container">
         <div class="card-1">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h1">Seamlessly visualize quality</header>
-            <p class="p-1">Collaboratively administrate empowered markets via plug-and-play networks</p>
-            <button>Here's why</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Seamlessly visualize quality</header>
+                <p>Collaboratively administrate empowered markets via plug-and-play networks</p>
+                <button>Here's why</button>
+            </div>
         </div>
         <div class="card-2">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h2">Completely Synergize</header>
-            <p class="p-2">Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration
-                and idea- sharing.</p>
-            <button>Here's how</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Completely Synergize</header>
+                <p>Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration
+                    and idea- sharing.</p>
+                <button>Here's how</button>
+            </div>
         </div>
         <div class="card-3">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h3">Dynamically Procrastinate</header>
-            <p class="p-3">Completely synergize resource taxing relationships via premier niche markets.</p>
-            <button>Read more</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Dynamically Procrastinate</header>
+                <p>Completely synergize resource taxing relationships via premier niche markets.</p>
+                <button>Read more</button>
+            </div>
         </div>
         <div class="card-4">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h4">Best in class</header>
-            <p class="p-4">Imagine jumping into that boat, and just letting it sail wherever the wind takes you...</p>
-            <button>Just do it...</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Best in class</header>
+                <p>Imagine jumping into that boat, and just letting it sail wherever the wind takes you...</p>
+                <button>Just do it...</button>
+            </div>
         </div>
         <div class="card-5">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h5">Dynamically innovate supply chains</header>
-            <p class="p-5">Holisticly predominate extensible testing procedures for reliable supply chains.</p>
-            <button>Here's why</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Dynamically innovate supply chains</header>
+                <p>Holisticly predominate extensible testing procedures for reliable supply chains.</p>
+                <button>Here's why</button>
+            </div>
         </div>
         <div class="card-6">
-            <img style="height: 220px; width: 248px;" src="pexels-asad-photo-maldives-457882.jpg">
-            <header class="h6">Dynamically innovate supply chains</header>
-            <p class="p-6">Holisticly predominate extensible testing procedures for reliable supply chains.</p>
-            <button>Here's why</button>
+            <img src="pexels-asad-photo-maldives-457882.jpg">
+            <div class="section">
+                <header>Dynamically innovate supply chains</header>
+                <p>Holisticly predominate extensible testing procedures for reliable supply chains.</p>
+                <button>Here's why</button>
+            </div>
         </div>
     </div>
 </body>
