search bar not applied flexbox

--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -18,16 +18,12 @@
         </div>
     </header>
     <!-- banner section -->
-    <section class="banner-class">
+    <section class="banner-area">
         <div class="overlay">
             <div class="flex-container-2">
-                <img src="Bedroom-table-chair-bed-window-bright_1920x1200.jpg">
-                <h1>Enjoy Holidays<br>
-                    with affordable Hotels
-                </h1>
+                <h1>Enjoy Holidays with affordable Hotels</h1>
+                <a href="#">Start Searching</a>
             </div>
-            <a class="btn-1" href="button">Start Searching</a>
-        </div>
         </div>
     </section>
 </body>
