--- a/flexbox/sidenav.html
+++ b/flexbox/sidenav.html
@@ -16,6 +16,7 @@
             padding: 6px 8px 6px 16px;
             text-decoration: none;
             font-size: 25px;
+            line-height: 2;
         }
 
         .sidenav a:hover {
