Platina gradeint banner area

--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -18,13 +18,16 @@
         </div>
     </header>
     <!-- banner section -->
-    <section class="banner-area">
+    <div class="banner-area">
         <div class="overlay">
             <div class="flex-container-2">
-                <h1>Enjoy Holidays with affordable Hotels</h1>
-                <a href="#">Start Searching</a>
+                <div class="banner-content">
+                    <h1>Enjoy Holidays<br>with affordable Hotels<br>
+                        <a class="btn-1" href="#">START SEARCHING</a>
+                    </h1>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
