--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -29,5 +29,18 @@
             </div>
         </div>
     </div>
+    <!-- service area -->
+    <div class="service-area">
+        <div class="flex-container-3">
+            <div class="header-area">
+                <h2>Superb Facilities</h2>
+                <p1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut<br>
+                    labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="Facilites">
+            <a href="#"><img src="f1.jpg"></a>
+        </div>
+    </div>
 </body>
 </html>
