--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -38,9 +38,47 @@
                     labore et dolore magna aliqua.</p>
             </div>
         </div>
-        <div class="Facilites">
-            <a href="#"><img src="f1.jpg"></a>
+    </div>
+    <!-- Facilities -->
+    <div class="flex-container-4">
+        <div class="Facilities">
+            <a href="#" target="_blank">
+                <img class="content-image" src="f1.jpg">
+                <div class="content-title">
+                    <div class="context">Resort Holiday package</div>
+                </div>
+            </a>
+        </div>
+        <div class="Facilities">
+            <a href="#" target="_blank">
+                <img class="content-image" src="f2.jpg">
+                <div class="content-title">
+                    <div class="context">Resort Holiday package</div>
+                </div>
+            </a>
+        </div>
+        <div class="Facilities">
+            <a href="#" target="_blank">
+                <img class="content-image" src="f3.jpg">
+                <div class="content-title">
+                    <div class="context">Resort Holiday package</div>
+                </div>
+            </a>
         </div>
     </div>
+    <!-- About area -->
+    <section class="about-area">
+        <div class="flex-container-5">
+            <img class="door-img" src="about-img.jpg">
+            <div class="text-area">
+                <h6>A very Lovely Welcome<br>
+                    to our Hotel</h6>
+                <p2>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
+                    standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
+                    the job is beyond reproach. inappropriate behavior is often laughed.</p2><br>
+                <button class="btn-2">Make Package of your own</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
