current working files

--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fb65a100f4.js" crossorigin="anonymous"></script>
+</head>
+<body>
     <!-- header section -->
     <header class="default-header">
         <div class="flex-container-1">
             <a href="#"><img src="logo.png"></a>
             <div class="main menu">
                 <nav class="nav-bar">
-                    <a href="Home">Home</a>
-                    <a href="Facilites">Facilities</a>
-                    <a href="Services">Services</a>
-                    <a href="Book">Book</a>
+                    <a href="#Home">Home</a>
+                    <a href="#Facilites">Facilities</a>
+                    <a href="#Services">Services</a>
+                    <a href="#Book">Book</a>
                 </nav>
             </div>
         </div>
@@ -39,13 +42,12 @@
             </div>
         </div>
     </div>
-    <!-- Facilities -->
     <div class="flex-container-4">
         <div class="Facilities">
             <a href="#" target="_blank">
                 <img class="content-image" src="f1.jpg">
                 <div class="content-title">
-                    <div class="context">Resort Holiday package</div>
+                    <h3 class="context">Resort Holiday package</h3>
                 </div>
             </a>
         </div>
@@ -53,7 +55,7 @@
             <a href="#" target="_blank">
                 <img class="content-image" src="f2.jpg">
                 <div class="content-title">
-                    <div class="context">Resort Holiday package</div>
+                    <h3 class="context">Resort Holiday package</h3>
                 </div>
             </a>
         </div>
@@ -61,7 +63,7 @@
             <a href="#" target="_blank">
                 <img class="content-image" src="f3.jpg">
                 <div class="content-title">
-                    <div class="context">Resort Holiday package</div>
+                    <h3 class="context">Resort Holiday package</h3>
                 </div>
             </a>
         </div>
@@ -71,8 +73,8 @@
         <div class="flex-container-5">
             <img class="door-img" src="about-img.jpg">
             <div class="text-area">
-                <h6>A very Lovely Welcome<br>
-                    to our Hotel</h6>
+                <h4>A very Lovely Welcome<br>
+                    to our Hotel</h4>
                 <p2>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
                     standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
                     the job is beyond reproach. inappropriate behavior is often laughed.</p2><br>
@@ -80,5 +82,229 @@
             </div>
         </div>
     </section>
+    <!-- Facilities -->
+    <section class="Facilities-area">
+        <div class="flex-container-6">
+            <div class="header-area">
+                <h5>Superb Facilities</h5>
+                <p3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                    ut<br>
+                    labore et dolore magna aliqua.</p3>
+            </div>
+        </div>
+        <div class="offer-icons">
+            <div class="icon-area">
+                <i class="fa-solid fa-rocket"></i>
+                <h6>Easy Flight Search</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+            <div class="icon-area">
+                <i class="fa-solid fa-wand-magic-sparkles fa-flip-horizontal"></i>
+                <h6>Get Hotel Offers</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+            <div class="icon-area">
+                <i class="fa-solid fa-gift"></i>
+                <h6>Holiday Packages</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+            <div class="icon-area">
+                <i class="fa-solid fa-rocket"></i>
+                <h6>Easy Flight Search</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+            <div class="icon-area">
+                <i class="fa-solid fa-wand-magic-sparkles fa-flip-horizontal"></i>
+                <h6>Get Hotel Offers</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+            <div class="icon-area">
+                <i class="fa-solid fa-gift"></i>
+                <h6>Holiday Packages</h6>
+                <p3>
+                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
+                </p3>
+            </div>
+        </div>
+    </section>
+    <!-- Gallery area -->
+    <section class="Gallery-area">
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g1.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g2.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g3.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g4.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g5.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+        <div class="Gallery">
+            <a href="#" target="_blank">
+                <img class="Gallery-image" src="g6.jpg">
+                <div class="Gallery-title">
+                    <h7 class="Gallery-context">Resort Holiday package</h7>
+                </div>
+            </a>
+        </div>
+    </section>
+    <!-- Booking area -->
+    <section class="booking-area">
+        <div class="flex-container-8">
+            <div class="booking-title">
+                <h8>Book a Room</h8><br>
+                <p4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut<br>
+                    labore et dolore magna aliqua.</p4>
+            </div>
+        </div>
+        <form class="booking-form">
+            <div class="column-1">
+                <input type="text" name="fname" placeholder="First Name"><br>
+                <input type="date" name="fname" placeholder="Arrival"><br>
+                <select name="Room-type"><br>
+                    <option value="0">Room-type</option>
+                    <option value="1">Room Type 1</option>
+                    <option value="2">Room Type 2</option>
+                    <option value="3">Room Type 3</option>
+                </select><br>
+                <select name="Adults">
+                    <option value="0">Adults</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+            <div class="column-2">
+                <input type="text" name="fname" placeholder="Last Name"><br>
+                <input type="date" name="fname" placeholder="Departure"><br>
+                <select name="Number Of Rooms"><br>
+                    <option value="0">Number Of Rooms</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select><br>
+                <select name="Childs">
+                    <option value="0">Childs</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+            <div class="message-area">
+                <textarea class="message-area-part" placeholder="Message"></textarea>
+            </div>
+        </form>
+        <div class="button-area">
+            <button class="btn-3">BOOK ROOM<i id="arrow-right-long" class="fa-solid fa-arrow-right-long"></i></button>
+        </div>
+    </section>
+    <!-- contact-info -->
+    <section class="contact-info">
+        <div class="flex-container-9">
+            <div class="contact-area">
+                <h9>Visit Our Office</h9><br>
+                <p5>56/8, bir uttam qazi nuruzzaman<br>
+                    road, west panthapath, kalabagan,<br>
+                    Dhanmondi, Dhaka - 1205</p5>
+            </div>
+            <div class="contact-area">
+                <h9>Let’s call us</h9><br>
+                <p5>Phone 01: 012-6532-568-9746<br>
+                    Phone 02: 012-6532-568-9748<br>
+                    FAX: 02-6532-568-746</p5>
+            </div>
+            <div class="contact-area">
+                <h9>Let’s Email Us</h9><br>
+                <p5>hello@colorlib.com<br>
+                    mainhelpinfo@colorlib.com<br>
+                    infohelp@colorlib.com</p5>
+            </div>
+            <div class="contact-area">
+                <h9>Customer Support</h9><br>
+                <p5>support@colorlib.com<br>
+                    emergencysupp@colorlib.com<br>
+                    extremesupp@colorlib.com</p5>
+            </div>
+        </div>
+    </section>
+    <!-- End footer area -->
+    <footer class="footer-area">
+        <div class="flex-container-10">
+            <div class="about-footer">
+                <h10>About Us</h10><br>
+                <p6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    dolore magna aliqua.</p6>
+            </div>
+            <div class="feedback">
+                <h10>Newsletter</h10><br>
+                <p6>Stay update with our latest</p6><br>
+                <div class="notification">
+                    <input name="Email" placeholder="Enter Email" type="email">
+                    <button class="btn-4"><i id="arrow-2" class="fa-solid fa-arrow-right-long"></i></button>
+                </div>
+            </div>
+            <div class="social-media">
+                <h10 class="Instagram Feed">Instagram Feed</h10><br>
+                <ul class="albums">
+                    <li><img src="i1.jpg"></li>
+                    <li><img src="i2.jpg"></li>
+                    <li><img src="i3.jpg"></li>
+                    <li><img src="i4.jpg"></li>
+                    <li><img src="i5.jpg"></li>
+                    <li><img src="i6.jpg"></li>
+                    <li><img src="i7.jpg"></li>
+                    <li><img src="i8.jpg"></li>
+                </ul>
+            </div>
+            <div class="follow-area">
+                <h10>Follow Us</h10><br>
+                <p6>Let us be social</p6><br>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                <a href="#"><i class="fa-brands fa-behance"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
