--- a/Practice-file/Practice file.html
+++ b/Practice-file/Practice file.html
@@ -27,15 +27,16 @@
         animation-direction: alternate;
     }
 
-    @keyframes example {
+    /* @keyframes example {
         from {left:0 px; top: 0px;}
         to {left:10px; top: 0px;}
-    }
+    } */
     i:hover {
     transform: translate(10px);
     transition: all 0.3s ease 0s;
     color: #ffffff;
     }
+    
 </style>
 <body>
     <a href="#" class="btn">Book Rooms<i class="fa-solid fa-arrow-right"></i></a>
