--- a/Platina/Platina.html
+++ b/Platina/Platina.html
@@ -277,7 +277,7 @@
             </div>
             <div class="feedback">
                 <h10>Newsletter</h10><br>
-                <p6>Stay update with our latest</p6><br>
+                <p6>Stay update with our latest</p6>
                 <div class="notification">
                     <input name="Email" placeholder="Enter Email" type="email">
                     <button class="btn-4"><i id="arrow-2" class="fa-solid fa-arrow-right-long"></i></button>
@@ -299,10 +299,21 @@
             <div class="follow-area">
                 <h10>Follow Us</h10><br>
                 <p6>Let us be social</p6><br>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-dribbble"></i></a>
-                <a href="#"><i class="fa-brands fa-behance"></i></a>
+                <div class="app-area">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                    <a href="#"><i class="fa-brands fa-behance"></i></a>
+                </div>
+            </div>
+            <div class="copyright-area">
+                <p>
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i
+                        class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                        target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com"
+                        target="_blank">ThemeWagon</a>
+                </p>
             </div>
         </div>
     </footer>
